deployments/stage-golang-gin-boilerplate-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-gin-boilerplate
  namespace: default
spec:
  selector:
    matchLabels:
      app: golang-gin-boilerplate
  replicas: 1
  template:
    metadata:
      annotations:
        secret.reloader.stakater.com/reload: golang-gin-boilerplate-secret
      labels:
        app: golang-gin-boilerplate
    spec:
      containers:
        - name: golang-gin-boilerplate
          image: ecr.link/golang-gin-boilerplate:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: trackersport
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "50Mi"
              cpu: "50m"
      imagePullSecrets:
        - name: aws-ecr-login
---
apiVersion: v1
kind: Service
metadata:
  name: golang-gin-boilerplate-svc
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
  selector:
    app: golang-gin-boilerplate
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-gin-boilerplate-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: stage-api.10minuteschool.com
      http:
        paths:
          - path: /golang-gin-boilerplate(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: golang-gin-boilerplate-svc
                port:
                  number: 80
